[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/GUI/PlayerInfoUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/GUI/gameInfoUI.gd" type="Script" id=2]

[node name="GameInfoUI" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Info" parent="." instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 145.0
margin_bottom = 600.0

[node name="GameInfo" type="VBoxContainer" parent="."]
margin_left = 149.0
margin_right = 874.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="HBoxContainer" type="HBoxContainer" parent="GameInfo"]
margin_right = 725.0
margin_bottom = 56.0
mouse_filter = 2
alignment = 1

[node name="TurnLabel" type="PanelContainer" parent="GameInfo/HBoxContainer"]
margin_left = 297.0
margin_right = 427.0
margin_bottom = 56.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 5

[node name="MarginContainer" type="MarginContainer" parent="GameInfo/HBoxContainer/TurnLabel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 123.0
margin_bottom = 49.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="GameInfo/HBoxContainer/TurnLabel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 111.0
margin_bottom = 37.0

[node name="Turn" type="Label" parent="GameInfo/HBoxContainer/TurnLabel/MarginContainer/VBoxContainer"]
margin_right = 106.0
margin_bottom = 14.0
text = "Turn: 100"
align = 1

[node name="Following" type="Label" parent="GameInfo/HBoxContainer/TurnLabel/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 106.0
margin_bottom = 32.0
text = "Following: NAME"

[node name="Player2Info" parent="." instance=ExtResource( 1 )]
margin_left = 878.0
margin_top = 0.0
margin_right = 1024.0
margin_bottom = 600.0
